WIP: making a plot of the bump shape.

--- a/showyourwork.yml
+++ b/showyourwork.yml
@@ -109,6 +109,8 @@ dependencies:
     - src/data/trace_cosmo.nc
   src/scripts/mock_observation_corner.py:
     - src/data/mock_observations.h5
+  src/scripts/peak_zoomin.py:
+    - src/data/trace.nc
 
 
 # Name of the `.tex` manuscript and corresponding `.pdf` article
